--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'com.google.android.material:material:1.0.0-alpha3'
     implementation 'androidx.cardview:cardview:1.0.0-alpha3'
+    implementation 'org.mockito:mockito-core:1.9.5'
 }
